--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
+        pip install -e .
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -37,3 +38,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Uninstall dependencies
+      run: |
+        pip uninstall simtrack
