--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,3 +38,5 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: coverage.py badge
+      uses: tj-actions/coverage-badge-py@v1.8
