--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,5 +38,8 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
-    - name: coverage.py badge
-      uses: tj-actions/coverage-badge-py@v1.8
+    - name: Upload coverage reports to Codecov
+      run: |
+        curl -Os https://uploader.codecov.io/latest/linux/codecov
+        chmod +x codecov
+        ./codecov -t ${CODECOV_TOKEN}
