--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,13 @@ PyJWT = "^2.8.0"
 psutil = "^5.9.6"
 pydantic = "1.10.7"
 plotly = "^5.18.0"
+setuptools = "^69.0.2"
+toml = "^0.10.2"
+flatdict = "^4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
+pytest-mock = "^3.12.0"
 
 [tool.poetry.scripts]
 simvue_sender = "simvue.bin.simvue_sender:run"
