--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dill = "^0.3.7"
 requests = "^2.31.0"
 msgpack = "^1.0.7"
 tenacity = "^8.2.3"
-pandas = "^2.1.3"
+pandas = {version = "^2.1.3", extras=["pandas"]}
 PyJWT = "^2.8.0"
 psutil = "^5.9.6"
 pydantic = "1.10.7"
@@ -22,6 +22,7 @@ plotly = "^5.18.0"
 setuptools = "^69.0.2"
 toml = "^0.10.2"
 flatdict = "^4.0.1"
+torch = {version = "^2.1.2", extras = ["torch"]}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
