--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest-cov
-        pip install -e .
-        if [ -f test-requirements.txt ]; then pip install -r test-requirements.txt; fi
+        pip install flake8 poetry
+        poetry install
+        poetry run python -m pip install pytest-cov
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -37,9 +37,10 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --extend-ignore=C901,E261,E302,E305,F401
     - name: Test with pytest
       run: |
-        pytest --cov --ignore=./tests/functional
+        poetry run pytest --cov
     - name: Upload coverage reports to Codecov
       run: |
         curl -Os https://uploader.codecov.io/latest/linux/codecov
         chmod +x codecov
         ./codecov -t ${CODECOV_TOKEN}
+      if: github.ref == 'refs/head/main'
