--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,15 +14,22 @@ dill = "^0.3.7"
 requests = "^2.31.0"
 msgpack = "^1.0.7"
 tenacity = "^8.2.3"
-pandas = {version = "^2.1.3", extras=["pandas"]}
+pandas = {version = "^2.1.3", extras=["dataset"]}
 PyJWT = "^2.8.0"
 psutil = "^5.9.6"
-plotly = "^5.18.0"
+plotly = {version = "^5.18.0", extras=["plot"]}
 setuptools = "^69.0.2"
 toml = "^0.10.2"
 flatdict = "^4.0.1"
 torch = {version = "^2.1.2", extras = ["torch"]}
 pydantic = "^2.5.3"
+matplotlib = {version = "^3.8.2", extras=["plot"]}
+numpy = {version = "^1.26.3", extras=["dataset"]}
+
+[tool.poetry.extras]
+dataset = ["pandas", "numpy"]
+torch = ["torch"]
+plot = ["matplotlib", "plotly"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
