--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ msgpack = "^1.0.7"
 tenacity = "^8.2.3"
 PyJWT = "^2.8.0"
 psutil = "^5.9.8"
-pydantic = "1.10.7"
+pydantic = "^2.5.3"
 pandas = {version = "^2.2.0", extras=["dataset"]}
 plotly = {version = "^5.18.0", extras=["plot"]}
 torch = {version = "^2.1.2", extras = ["torch"], python = "<3.12"}
