Added pytest to dev dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ plot = ["matplotlib", "plotly"]
 [tool.poetry.scripts]
 simvue_sender = "simvue.bin.simvue_sender:run"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
