--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ torch = ["torch"]
 plot = ["matplotlib", "plotly"]
 
 [tool.poetry.scripts]
-simvue_sender = "simvue.bin.simvue_sender:run"
+simvue_sender = "simvue.bin.sender:run"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
