Switch to TOML configuration file with further options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ simvue_sender = "simvue.bin.sender:run"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
+pytest-mock = "^3.12.0"
 
 [build-system]
 requires = ["poetry-core"]
