--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ numpy = {version = "^1.26.3", optional = true}
 matplotlib = {version = "^3.8.2", optional = true}
 toml = "^0.10.2"
 colorama = "^0.4.6"
+flatdict = "^4.0.1"
 
 [tool.poetry.extras]
 dataset = ["pandas", "numpy"]
