--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,4 +11,4 @@ updates:
       prefix: "pip"
       include: "scope"
     open-pull-requests-limit: 5
-    target-branch: "main"
+    target-branch: "dev"
