--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,7 +35,7 @@ jobs:
       run: python -m pip install poetry
     - name: Test with pytest
       run: |
-        poetry install
+        poetry install --all-extras
         poetry run pytest --cov --cov-report=xml tests/unit/
     - name: Upload coverage reports to Codecov
       run: |
