Fix dispatch and run tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,7 @@
 markers =
     client: tests of Simvue client
     converters: tests for Simvue object converters
+    dispatch: test data dispatcher
+    run: test the simvue Run class
+    utilities: test simvue utilities module
+    scenario: test scenarios
