--- a/.github/workflows/test_client_macos.yml
+++ b/.github/workflows/test_client_macos.yml
@@ -21,6 +21,9 @@ jobs:
     - name: Install dependencies
       run: python -m pip install poetry
     - name: Test with pytest
+      env:
+          SIMVUE_URL:: ${{ secrets.SIMVUE_URL }}
+          SIMVUE_TOKEN:: ${{ secrets.SIMVUE_TOKEN }}
       run: |
         poetry install --all-extras
         poetry run pytest tests/unit/ tests/refactor/
