--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -26,10 +26,9 @@ jobs:
     - name: Install dependencies
       run: python -m pip install poetry
     - name: Test with pytest
-      env:
-        SIMVUE_URL:: ${{ secrets.SIMVUE_URL }}
-        SIMVUE_TOKEN:: ${{ secrets.SIMVUE_TOKEN }}
       run: |
+        export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
+        export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
         poetry install --all-extras
         poetry run pytest --cov --cov-report=xml tests/unit/ tests/refactor/
     - name: Upload coverage reports to Codecov
