--- a/.github/workflows/test_client_windows.yml
+++ b/.github/workflows/test_client_windows.yml
@@ -21,9 +21,8 @@ jobs:
     - name: Install dependencies
       run: python -m pip install poetry
     - name: Test with pytest
-      env:
-        SIMVUE_URL:: ${{ secrets.SIMVUE_URL }}
-        SIMVUE_TOKEN:: ${{ secrets.SIMVUE_TOKEN }}
       run: |
+        export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
+        export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
         poetry install --all-extras
         poetry run pytest tests/unit/ tests/refactor/
