--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,28 @@ priority = "supplemental"
 [[tool.poetry.source]]
 name = "PyPI"
 priority = "primary"
+
+
+[tool.ruff]
+lint.extend-select = ["C901"]
+lint.mccabe.max-complexity = 11
+
+[tool.pytest.ini_options]
+addopts = "-p no:warnings --cov=simvue"
+testpaths = [
+    "tests"
+]
+markers = [
+    "client: tests of Simvue client",
+    "converters: tests for Simvue object converters",
+    "dispatch: test data dispatcher",
+    "run: test the simvue Run class",
+    "utilities: test simvue utilities module",
+    "scenario: test scenarios"
+]
+
+[tool.interrogate]
+ignore-init-method = true
+fail-under = 95
+verbose = 1
+exclude = ["docs", "tests", "multiparser/typing.py"]
