--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,9 @@ pytest-cov = ">=4.1,<6.0"
 pytest-xdist = "^3.5.0"
 pytest-mock = "^3.14.0"
 torch = [
-    {markers = "sys_platform != 'darwin'", version = "^2.0.0+cpu", source = "pytorch-cpu"},
-    {platform = "darwin", version="^2.0.0"}
+    {platform = "linux", version = "^2.0.0+cpu", source = "pytorch-cpu"},
+    {platform = "darwin", version="^2.0.0"},
+    {platform = "win32", version="^2.0.0"},
 ]
 
 [build-system]
