--- a/.github/workflows/test_client_macos.yml
+++ b/.github/workflows/test_client_macos.yml
@@ -19,7 +19,9 @@ jobs:
       with:
         python-version: "3.11"
     - name: Install dependencies
-      run: python -m pip install poetry
+      run: |
+        rm poetry.lock
+        python -m pip install poetry
     - name: Test with pytest
       run: |
         export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
