--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,8 @@ pytest-xdist = "^3.5.0"
 pytest-mock = "^3.14.0"
 torch = [
     {platform = "linux", version = "^2.0.0+cpu", source = "pytorch-cpu"},
-    {platform = "darwin", version="^2.0.0"},
-    {platform = "win32", version="^2.0.0"},
+    {platform = "darwin", version="^2.0.0", source="PyPI"},
+    {platform = "win32", version="^2.0.0", source="PyPI"},
 ]
 
 [build-system]
