--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ numpy = {version = "^1.26.3", optional = true}
 matplotlib = {version = "^3.8.2", optional = true}
 toml = "^0.10.2"
 click = "^8.1.7"
+tabulate = "^0.9.0"
 
 [tool.poetry.extras]
 dataset = ["pandas", "numpy"]
@@ -72,7 +73,8 @@ markers = [
     "run: test the simvue Run class",
     "utilities: test simvue utilities module",
     "scenario: test scenarios",
-    "executor: tests of executors"
+    "executor: tests of executors",
+    "api: tests of RestAPI functionality"
 ]
 
 [tool.interrogate]
