--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -43,16 +43,16 @@ jobs:
           shell: bash -l {0}
           run: python ./examples/GeometryOptimisation/bluemira_simvue_geometry_optimisation.py
   OpenFOAM:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container:
       image: openfoam/openfoam10-paraview56
       options: --user root
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.10"
       - name: Install dependencies
         run: python -m pip install poetry ukaea-multiparser
       - name: Test with pytest
