--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -49,15 +49,19 @@ jobs:
       options: --user root
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
+      - name: Manual Python Install
+        run: |
+          add-apt-repository ppa:deadsnakes/ppa -y
+          apt-get update && \
+          apt-get install -y python3.11-full
+
       - name: Install dependencies
-        run: python -m pip install poetry ukaea-multiparser
+        run: |
+          python3.11 -m ensurepip --upgrade
+          python3.11 -m pip install ukaea-multiparser
       - name: Test with pytest
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
-          poetry install
-          poetry run python ./examples/OpenFOAM/simvue_openfoam.py /opt/openfoam10/tutorials/incompressible/pimpleFoam/laminar/movingCone/Allrun
+          python3.11 -m pip install .
+          python3.11 ./examples/OpenFOAM/simvue_openfoam.py /opt/openfoam10/tutorials/incompressible/pimpleFoam/laminar/movingCone/Allrun
