--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -88,7 +88,9 @@ jobs:
       - name: Install Simvue
         run: python3 -m pip install .
       - name: Install Dependencies
-        run: python3 -m pip install -r examples/Optuna/PyTorch/requirements.txt
+        run: |
+          python3 -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+          python3 -m pip install -r examples/Optuna/PyTorch/requirements.txt
       - name: Run Example
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
@@ -105,7 +107,9 @@ jobs:
       - name: Install Simvue
         run: python3 -m pip install .
       - name: Install Dependencies
-        run: python3 -m pip install -r examples/PyTorch/requirements.txt
+        run: |
+          python3 -m pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+          python3 -m pip install -r examples/PyTorch/requirements.txt
       - name: Run Example
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
