--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
-          python3 examples/Logging/logging-to-simvue.py
+          python3 examples/Logging/logging-to-simvue.py --ci
   OpenFOAM:
     runs-on: ubuntu-latest
     container:
@@ -76,7 +76,7 @@ jobs:
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
-          python3.11 ./examples/OpenFOAM/simvue_openfoam.py /opt/openfoam10/tutorials/incompressible/pimpleFoam/laminar/movingCone/Allrun
+          python3.11 ./examples/OpenFOAM/simvue_openfoam.py /opt/openfoam10/tutorials/incompressible/pimpleFoam/laminar/movingCone/Allrun  --ci
   Optuna:
     runs-on: ubuntu-latest
     steps:
@@ -95,7 +95,7 @@ jobs:
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
-          python3.11 ./examples/Optuna/PyTorch/simvue_optuna_pytorch.py
+          python3.11 ./examples/Optuna/PyTorch/simvue_optuna_pytorch.py --ci
   PyTorch:
     runs-on: ubuntu-latest
     steps:
@@ -114,7 +114,7 @@ jobs:
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
-          python3.11 ./examples/PyTorch/main.py --epochs 2 --batch-size 2
+          python3.11 ./examples/PyTorch/main.py --ci
   SU2:
     runs-on: ubuntu-latest
     steps:
@@ -135,4 +135,4 @@ jobs:
         run: |
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
-          python examples/SU2/SU2.py bin --config tests/example_data/SU2_inv_ONERAM6.cfg
+          python examples/SU2/SU2.py bin --config tests/example_data/SU2_inv_ONERAM6.cfg --ci
