--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ matplotlib = {version = "^3.8.2", optional = true}
 toml = "^0.10.2"
 click = "^8.1.7"
 humanfriendly = "^10.0"
+tabulate = "^0.9.0"
 
 [tool.poetry.extras]
 dataset = ["pandas", "numpy"]
