--- a/.github/workflows/test_multiple_python.yml
+++ b/.github/workflows/test_multiple_python.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Simvue Client (Ubuntu)
+name: Simvue Client (Python Versions)
 
 on:
   push:
@@ -14,15 +14,17 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    strategy:
+        matrix:
+            python-version: ['3.9', '3.10', '3.11']
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.12
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: "3.12"
+        python-version: "${{ matrix.python-version }}"
     - name: Install dependencies
       run: python -m pip install poetry
     - name: Test with pytest
@@ -31,8 +33,3 @@ jobs:
         export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
         poetry install --all-extras
         poetry run pytest --cov --cov-report=xml tests/unit/ tests/refactor/
-    - name: Upload coverage reports to Codecov
-      run: |
-        curl -Os https://uploader.codecov.io/latest/linux/codecov
-        chmod +x codecov
-        ./codecov -t ${CODECOV_TOKEN}
