--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,16 +39,16 @@ tenacity = "^8.2.3"
 PyJWT = "^2.8.0"
 psutil = "^5.9.8"
 pydantic = "^2.5.3"
-pandas = {version = "^2.2.0", optional = true}
+pandas = "^2.2.0"
 plotly = {version = "^5.18.0", optional = true}
-numpy = {version = "^1.26.3", optional = true}
+numpy = "^1.26.3"
 matplotlib = {version = "^3.8.2", optional = true}
 toml = "^0.10.2"
 click = "^8.1.7"
 
 [tool.poetry.extras]
-dataset = ["pandas", "numpy"]
 plot = ["matplotlib", "plotly"]
+torch = ["torch"]
 
 [tool.poetry.scripts]
 simvue_sender = "simvue.bin.sender:run"
@@ -61,9 +61,9 @@ pytest-cov = ">=4.1,<6.0"
 pytest-mock = "^3.14.0"
 pytest-sugar = "^1.0.0"
 torch = [
-    {platform = "linux", version = "^2.0.0+cpu", source = "pytorch-cpu"},
-    {platform = "darwin", version="^2.0.0", source="PyPI"},
-    {platform = "win32", version="^2.0.0", source="PyPI"},
+    {platform = "linux", version = "^2.0.0+cpu", source = "pytorch-cpu", optional=true},
+    {platform = "darwin", version="^2.0.0", source="PyPI", optional=true},
+    {platform = "win32", version="^2.0.0", source="PyPI", optional=true},
 ]
 
 [build-system]
