--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ torch = [
     {platform = "darwin", version="^2.0.0", source="PyPI"},
     {platform = "win32", version="^2.0.0", source="PyPI"},
 ]
+pytest-xdist = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -89,7 +90,7 @@ lint.extend-select = ["C901"]
 lint.mccabe.max-complexity = 11
 
 [tool.pytest.ini_options]
-addopts = "-p no:warnings --cov=simvue"
+addopts = "-p no:warnings --cov=simvue -n auto"
 testpaths = [
     "tests"
 ]
