--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ pytest-cov = ">=4.1,<6.0"
 pytest-mock = "^3.14.0"
 pytest-sugar = "^1.0.0"
 pytest-xdist = "^3.6.1"
+jinja2 = "^3.1.4"
 
 [build-system]
 requires = ["poetry-core"]
