--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -2,7 +2,7 @@ name: Simvue Examples
 
 on:
   push:
-    branches: [ "main", "dev", "hotfix/update-ci", "296-*" ]
+    branches: [ "main", "dev", "hotfix/update-ci", "296-*", "examples/*" ]
   pull_request:
     branches: [ "main", "dev", "hotfix/update-ci" ]
 
