Add missing submodule checkout

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -160,6 +160,8 @@ jobs:
       image: artemisbeta/geant4:11.2.1
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
