Use recursive submodules in CI

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -161,7 +161,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
