Run example trial only on tags

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -2,9 +2,8 @@ name: Simvue Examples
 
 on:
   push:
-    branches: [ "main", "dev", "hotfix/update-ci", "296-*", "examples/*" ]
-  pull_request:
-    branches: [ "main", "dev", "hotfix/update-ci" ]
+    tags:
+      - 'v*-*-rc*'
 
 permissions:
   contents: read
