--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -75,7 +75,7 @@ jobs:
         run: python3.11 -m pip install .
       - name: Run Example
         run: |
-          source /opt/openfoam10/etc/bashrc
+          . /opt/openfoam10/etc/bashrc
           export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
           export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
           python3.11 ./examples/OpenFOAM/simvue_openfoam.py /opt/openfoam10/tutorials/incompressible/pimpleFoam/laminar/movingCone/Allrun  --ci
