Add manual trigger to CI

--- a/.github/workflows/test_client_macos.yml
+++ b/.github/workflows/test_client_macos.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main", "dev", "hotfix/update-ci" ]
   pull_request:
     branches: [ "main", "dev", "hotfix/update-ci" ]
+  workflow_dispatch:
 
 permissions:
   contents: read
