--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -8,6 +8,7 @@ on:
     branches: [ "main", "dev", "hotfix/update-ci" ]
   pull_request:
     branches: [ "main", "dev", "hotfix/update-ci" ]
+  workflow_dispatch:
 
 permissions:
   contents: read
