--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -4,6 +4,7 @@
 name: Simvue Client (Ubuntu)
 
 on:
+  push: ["hotfix/update-ci"]
   pull_request:
     branches: [ "main", "dev", "hotfix/update-ci" ]
   workflow_dispatch:
@@ -29,7 +30,7 @@ jobs:
         export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
         export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
         poetry install --all-extras
-        poetry run pytest --cov --cov-report=xml tests/unit/ tests/refactor/ -m 'not scenario'
+        poetry run pytest -x --cov --cov-report=xml tests/unit/ tests/refactor/ -m 'not scenario'
     - name: Upload coverage reports to Codecov
       run: |
         curl -Os https://uploader.codecov.io/latest/linux/codecov
