--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -5,7 +5,7 @@ name: Simvue Client (Ubuntu)
 
 on:
   push:
-    branches: ["hotfix/update-ci"]
+    branches: ["main", "dev", "hotfix/update-ci"]
   pull_request:
     branches: [ "main", "dev", "hotfix/update-ci" ]
   workflow_dispatch:
