Use contains in CI logic

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,7 +35,7 @@ jobs:
     name: Publish to PyPi 🐍📦
     needs:
       - publish_test
-    if: github.ref =~ '^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$'
+    if: "!contains(github.ref, 'rc') && !contains(github.ref, 'beta') && !contains(github.ref, 'alpha')"
     runs-on: ubuntu-latest
     environment:
       name: pypi
