--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,13 @@ jobs:
         run: python -m pip install poetry
       - name: Build Module
         run: poetry build
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v4
+        with:
+          retention-days: 1
+          if-no-files-found: error
+          name: python-package-distributions
+          path: dist/
   publish_test:
     name: Publish to TestPyPi 🧪
     needs:
@@ -29,6 +36,11 @@ jobs:
     permissions:
       id-token: write
     steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
       - name: Publish to PyPi
         uses: pypa/gh-action-pypi-publish@release/v1
   publish:
@@ -43,16 +55,11 @@ jobs:
     permissions:
       id-token: write
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
+      - name: Download all the dists
+        uses: actions/download-artifact@v4
         with:
-          python-version: "3.x"
-      - name: Install Poetry
-        run: python -m pip install poetry
-      - name: Build Module
-        run: poetry build
+          name: python-package-distributions
+          path: dist/
       - name: Publish to PyPi
         uses: pypa/gh-action-pypi-publish@release/v1
   github-release:
@@ -65,7 +72,7 @@ jobs:
       id-token: write
     steps:
       - name: Download all the dists
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: python-package-distributions
           path: dist/
