Added missing URL for test PyPi

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,8 +41,10 @@ jobs:
         with:
           name: python-package-distributions
           path: dist/
-      - name: Publish to PyPi
+      - name: Publish to TestPyPi
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
   publish:
     name: Publish to PyPi 🐍📦
     needs:
