--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -79,7 +79,7 @@ jobs:
           name: python-package-distributions
           path: dist/
       - name: Sign the dists with Sigstore
-        uses: sigstore/gh-action-sigstore-python@v2.1.1
+        uses: sigstore/gh-action-sigstore-python@v2
         with:
           inputs: >-
             ./dist/*.tar.gz
@@ -88,10 +88,24 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: >-
+          LATESTCHANGES=$(awk '
+            BEGIN { header_found = 0 }
+            /^## / {
+                if (header_found == 0) {
+                    header = $0
+                    header_found = 1
+                    next
+                } else {
+                  exit
+                }
+            }
+            header_found == 1 && /^\* / { print }
+          ' CHANGELOG.md)
           gh release create
           '${{ github.ref_name }}'
+          --notes "$LATESTCHANGES"
+          --title 'Simvue ${{ github.ref_name }}'
           --repo '${{ github.repository }}'
-          --notes ""
       - name: Upload artifact signatures to GitHub Release
         env:
           GITHUB_TOKEN: ${{ github.token }}
