--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -24,6 +24,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.12"
+    - name: Setup Eco Measure
+      uses: green-coding-solutions/eco-ci-energy-estimation@v3
+      with:
+        task: start-measurement
     - name: Install dependencies
       run: python -m pip install poetry
     - name: Test with pytest
@@ -33,8 +37,17 @@ jobs:
         poetry install --all-extras
         poetry run python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
         poetry run pytest -x --cov --cov-report=xml tests/unit/ tests/refactor/ -m 'not scenario'
+    - name: Retrieve Eco Measure
+      uses: green-coding-solutions/eco-ci-energy-estimation@v3
+      with:
+        task: get-measurement
+        label: "test execution"
     - name: Upload coverage reports to Codecov
       run: |
         curl -Os https://uploader.codecov.io/latest/linux/codecov
         chmod +x codecov
         ./codecov -t ${CODECOV_TOKEN}
+    - name: Display Test Eco Measure
+      uses: green-coding-solutions/eco-ci-energy-estimation@v3
+      with:
+        task: display-results
