--- a/.github/workflows/test_client_macos.yml
+++ b/.github/workflows/test_client_macos.yml
@@ -22,8 +22,9 @@ jobs:
         python -m pip install poetry
     - name: Test with pytest
       run: |
-        export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
-        export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
         poetry install --all-extras
         poetry run python -m pip install torch
-        poetry run pytest tests/unit/ tests/refactor/ -m 'not scenario'
+        poetry run \
+        SIMVUE_URL=${{ secrets.SIMVUE_URL }} \
+        SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }} \
+        pytest tests/unit/ tests/refactor/ -m 'not scenario'
