--- a/.github/workflows/test_client_windows.yml
+++ b/.github/workflows/test_client_windows.yml
@@ -23,8 +23,9 @@ jobs:
     - name: Test with pytest
       shell: bash
       run: |
-        export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
-        export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
         poetry install --all-extras
         poetry run python -m pip install torch
-        poetry run pytest tests/unit/ tests/refactor/ -m 'not scenario' -m 'not unix'
+        poetry run \
+        SIMVUE_URL=${{ secrets.SIMVUE_URL }} \
+        SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }} \
+        pytest tests/unit/ tests/refactor/ -m 'not scenario' -m 'not unix'
