--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ gitpython = "^3.1.43"
 humanfriendly = "^10.0"
 tabulate = "^0.9.0"
 randomname = "^0.2.1"
+codecarbon = "^2.7.0"
 
 [tool.poetry.extras]
 plot = ["matplotlib", "plotly"]
