--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -19,7 +19,6 @@ concurrency:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -31,9 +30,12 @@ jobs:
     - name: Install dependencies
       run: python -m pip install poetry
     - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_TOKEN }}
       run: |
-        export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
-        export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
+        export SIMVUE_URL=$SIMVUE_URL
+        export SIMVUE_TOKEN=$SIMVUE_TOKEN
         poetry install --all-extras
         poetry run python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
         poetry run pytest -x --cov --cov-report=xml tests/unit/ tests/refactor/ -m 'not scenario'
