--- a/.github/workflows/test_client_ubuntu.yml
+++ b/.github/workflows/test_client_ubuntu.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         python-version: "3.12"
     - name: Setup Eco Measure
-      uses: green-coding-solutions/eco-ci-energy-estimation@v4.0-rc3
+      uses: green-coding-solutions/eco-ci-energy-estimation@v4.0-rc4
       with:
         task: start-measurement
     - name: Install dependencies
@@ -42,7 +42,7 @@ jobs:
         poetry run python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
         poetry run pytest -x --cov --cov-report=xml tests/unit/ tests/refactor/ -m 'not scenario'
     - name: Retrieve Eco Measure
-      uses: green-coding-solutions/eco-ci-energy-estimation@v4.0-rc3
+      uses: green-coding-solutions/eco-ci-energy-estimation@v4.0-rc4
       with:
         task: get-measurement
         label: "test execution"
@@ -52,6 +52,8 @@ jobs:
         chmod +x codecov
         ./codecov -t ${CODECOV_TOKEN}
     - name: Display Test Eco Measure
-      uses: green-coding-solutions/eco-ci-energy-estimation@v4.0-rc3
+      uses: green-coding-solutions/eco-ci-energy-estimation@v4.0-rc4
       with:
         task: display-results
+        pr-comment: true
+
