--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ priority = "primary"
 [tool.ruff]
 lint.extend-select = ["C901", "T201"]
 lint.mccabe.max-complexity = 11
-extend-exclude = ["tests", "examples", "notebooks"]
+extend-exclude = ["tests", "examples", "notebooks", ".github"]
 
 [tool.pytest.ini_options]
 addopts = "-p no:warnings --no-cov -n 0"
