Tidied test suite
Refactor tests have become new functional tests

--- a/.github/workflows/test_multiple_python.yml
+++ b/.github/workflows/test_multiple_python.yml
@@ -36,4 +36,4 @@ jobs:
         export SIMVUE_URL=${{ secrets.SIMVUE_URL }}
         export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
         poetry install --all-extras
-        poetry run pytest tests/unit/ tests/refactor/ -m 'not scenario'
+        poetry run pytest tests/ -m 'not scenario'
