--- a/.github/workflows/test_client_macos.yml
+++ b/.github/workflows/test_client_macos.yml
@@ -30,4 +30,4 @@ jobs:
         export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
         poetry install --all-extras
         poetry run python -m pip install torch
-        poetry run pytest tests/unit/ tests/refactor/ -m 'not scenario'
+        poetry run pytest tests/ -m 'not scenario'
