--- a/.github/workflows/test_client_windows.yml
+++ b/.github/workflows/test_client_windows.yml
@@ -31,4 +31,4 @@ jobs:
         export SIMVUE_TOKEN=${{ secrets.SIMVUE_TOKEN }}
         poetry install --all-extras
         poetry run python -m pip install torch
-        poetry run pytest tests/unit/ tests/refactor/ -m 'not scenario' -m 'not unix'
+        poetry run pytest tests/ -m 'not scenario' -m 'not unix'
