--- a/.github/workflows/test_multiple_python.yml
+++ b/.github/workflows/test_multiple_python.yml
@@ -29,10 +29,15 @@ jobs:
       with:
         python-version: "${{ matrix.python-version }}"
     - name: Install dependencies
-      run: python -m pip install poetry
-    - name: Test with pytest
       run: |
-        export SIMVUE_URL=${{ secrets.SIMVUE_NIGHTLY_URL }}
-        export SIMVUE_TOKEN=${{ secrets.SIMVUE_NIGHTLY_TOKEN }}
-        poetry install --all-extras
-        poetry run pytest tests/ -m 'not scenario'
+        python -m pip install poetry
+        poetry self add poetry-plugin-export
+        poetry export -f requirements.txt --with dev -o requirements.txt --all-extras
+        python -m pip install torch --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install -r requirements.txt
+        python -m pip install .
+    - name: Test with pytest
+      env:
+        SIMVUE_URL: ${{ secrets.SIMVUE_NIGHTLY_URL }}
+        SIMVUE_TOKEN: ${{ secrets.SIMVUE_NIGHTLY_TOKEN }}
+      run: python -m pytest tests/ -m 'not scenario'
