[skip ci] Update test_multiple_python.yml

--- a/.github/workflows/test_multiple_python.yml
+++ b/.github/workflows/test_multiple_python.yml
@@ -17,6 +17,7 @@ concurrency:
 
 jobs:
   build:
+    name: Test Python {{ matrix.python-version }}
     runs-on: ubuntu-latest
     timeout-minutes: 40
     strategy:
